# python3-capsolver

./: .buildinfo  .coveragerc  .gitignore  404.html  AGENTS.md  ARCHITECTURE.md  Makefile  README.md  genindex.html  image_example.py  index.html  objects.inv  pyproject.toml  requirements.style.txt  requirements.test.txt  search.html  searchindex.js
.github/: dependabot.yml
.github/workflows/: build.yml  build_sphinx.yml  install.yml  lint.yml  python-package.yml  sphinx.yml  test.yml  test_and_lint.yml  test_build.yml  zai-code-bot.yml
_sources/: index.rst.txt
_sources/modules/aws-waf/: example.rst.txt
_sources/modules/enum/: info.rst.txt
docs/: CNAME  conf.py  index.rst  requirements.txt
modules/akamai/: example.html
modules/aws-waf/: example.html
modules/binance/: example.html
modules/captcha-instrument/: info.html
modules/cloudflare/: example.html
modules/contacts/: info.html
modules/control/: example.html
modules/cyber-si-ara/: example.html
modules/datadome/: example.html
modules/enum/: info.html
modules/friendly/: example.html
modules/fun-captcha/: example.html
modules/gee-test/: example.html
modules/h-captcha/: example.html
modules/image-to-text/: example.html
modules/imperva/: example.html
modules/license/: info.html
modules/main/: info.html
modules/mt-captcha/: example.html
modules/other-libs/: info.html
modules/re-captcha/: example.html
modules/serializer/: info.html
modules/yandex/: example.html
src/: .coveragerc  pyproject.toml  requirements.txt  setup.py
src/python3_capsolver/: AGENTS.md  __init__.py  akamai.py  aws_waf.py  binance.py  cloudflare.py  control.py  cyber_si_ara.py  datadome_slider.py  friendly_captcha.py  fun_captcha.py  gee_test.py  hcaptcha.py  image_to_text.py  imperva.py  kasada.py  mt_captcha.py  recaptcha.py  recaptchav2_classification.py  vision_engine.py  yandex.py
src/python3_capsolver.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/python3_captchaai/: CaptchaControl.py  base.py  config.py  control.py  datadome_slider.py  enums.py  fun_captcha.py  gee_test.py  hcaptcha.py  image_to_text.py  kasada.py  mt_captcha.py  recaptcha.py  serializer.py
src/tests/: conftest.py  test_control.py  test_core.py  test_datadome_slider.py  test_fun_captcha.py  test_gee_test.py  test_hcaptcha.py  test_image_to_text.py  test_kasada.py  test_main.py  test_mt_captcha.py  test_recaptcha.py
tests/: AGENTS.md  conftest.py  test_akamai.py  test_aws_waf.py  test_binance.py  test_cloudflare.py  test_control.py  test_core.py  test_datadome.py  test_datadome_slider.py  test_friendly.py  test_fun_captcha.py  test_gee_test.py  test_hcaptcha.py  test_image_to_text.py  test_imperva.py  test_instrument.py  test_kasada.py  test_mt_captcha.py  test_recaptcha.py  test_vision_engine.py  test_yandex.py  x_test_recaptcha.py
(+74 files in other folders)
